--- a/gnome/polkit/build
+++ b/gnome/polkit/build
@@ -1,22 +1,24 @@
 #!/bin/sh -uxe
+export DESTDIR="$1"
 
-autoreconf -fiv
+# Fix build with meson 0.61
+patch -Np1 -i meson-0.61.patch
 
-./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --with-systemdsystemuserdir=/usr/lib/systemd/user \
-    --disable-libelogind \
-    --enable-gtk_doc \
-    --enable-examples \
-    --with-os_type=redhat
+zsh
+meson build \
+    -D session_tracking=libsystemd-login \
+    -D os_type=redhat \
+    -D examples=true \
+    -D tests=false \
+    -D gtk_doc=true \
+    -D man=true \
+    -D js_engine=mozjs
 
-make
-make DESTDIR="$1" install
+ninja -C build
+ninja -C build install
 
 install -dm750 "$1"/{etc,usr/share}/polkit-1/rules.d
-cp 50-default.rules "$1/usr/share/polkit-1/rules.d"
-
+mv "$1"/{etc,usr/share}/polkit-1/rules.d/50-default.rules
 
 install -Dm644 /dev/stdin "$1/usr/lib/sysusers.d/polkit.conf" <<END
 u polkitd 102 "PolicyKit daemon"
